--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
          <tr>
              <td>
                 <h2><strong>Xin Chen</strong> &nbsp;&nbsp; <i>(pronounced Shin Chern)</i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
-                <font size="4">Postdoctoral Researcher <br> Department of Computer Science <br> University of Colorado Boulder, CO</font>
-                <h4>Email: &nbsp; <i>xinchen AT colorado DOT edu</i></h4>
+                <font size="4">Assistant Professor <br> Department of Computer Science <br> University of Dayton, OH </font>
+                <h4>Email: &nbsp; <i>xchen4 AT udayton DOT edu</i></h4>
              </td>
              <td>
                  <img src="images/chen.png" alt="xinchen" width='320'>
