--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	 <li>Safety and Security of Cyber-Physical Systems.</li>
      <li>Formal Verification and Controller Synthesis of AI Systems.</li>
 	 <li>Verification and Validation of Embedded Systems.</li>
+     <li>Formal Methods.</li>
      </ul>
      <br>
     
