--- a/index.html
+++ b/index.html
@@ -46,17 +46,20 @@
      <br>
      
      <h3>Projects</h3>
-      <ul style="list-style-type:square">
-	 <li>2019-2020, Analysis and Abstraction of Hybrid Systems (PI), funded by Air Force Research Laboratory, $83,158.</li>
+     <ul style="list-style-type:square">
+	 <li>2019.08 - 2020.07, Analysis and Abstraction of Hybrid Systems (PI), funded by Air Force Research Laboratory, $83,158.</li>
+     <li>2017.05 - 2017.08, Summer of Innovation (co-PI), funded by Air Force Research Laboratory, $35,000 (my share).</li>
      </ul>
      <br>
      <br>
      
      <h3>Selected Publications</h3>
      <ol type="1">
+         <li>Chao Huang, Jiameng Fan, Wenchao Li, Xin Chen, and Qi Zhu. <br> <font color="blue"><i>ReachNN: Reachability Analysis of Neural-Network Controlled Systems.</i></font> <br> In ACM Transactions on Embedded Computing Systems (TECS), to appear.</li>
+         <li>Hansol Yoon, Yi Chou, Xin Chen, Eric Frew, and Sriram Sankaranarayanan. <br> <font color="blue"><i>Predictive Runtime Monitoring for Linear Stochastic Systems and Applications to Geofence Enforcement for UAVs.</i></font> <br> In Runtime Verification (RV), to appear.</li>
          <li>Souradeep Dutta, Xin Chen, and Sriram Sankaranarayanan. <br> <font color="blue"><i>Reachability Analysis for Neural Feedback Systems Using Regressive Polynomial Rule Inference.</i></font> <br> In Hybrid Systems: Computation and Control (HSCC), pp. 157-168, 2019.</li>
          <li>Xin Chen and Sriram Sankaranarayanan. <br> <font color="blue"><i>Model Predictive Real-Time Monitoring of Linear Systems.</i></font> <br> In Real Time Systems Symposium (RTSS), pp. 297-306, 2017.</li>
-	 <li>Xin Chen, Sergio Mover, and Sriram Sankaranarayanan. <br> <font color="blue"><i>Compositional Relational Abstraction for Nonlinear Hybrid Systems.</i></font> <br> In ACM Trans. Embedded Comput. Syst. 16(5): pp. 187:1-187:19, 2017.</li>
+	 <li>Xin Chen, Sergio Mover, and Sriram Sankaranarayanan. <br> <font color="blue"><i>Compositional Relational Abstraction for Nonlinear Hybrid Systems.</i></font> <br> In ACM Transactions on Embedded Computing Systems (TECS) 16(5): pp. 187:1-187:19, 2017.</li>
          <li>Xin Chen, Sriram Sankaranarayanan. <br>  <font color="blue"><i>Decomposed Reachability Analysis for Nonlinear Systems.</i> </font><br> In Real-Time Systems Symposium (RTSS), 2016.</li>
          <li>Mohamed Amin Ben Sassi, Sriram Sankaranarayanan, Xin Chen, Erika Abraham. <br>  <font color="blue"><i>Linear Relaxations of Polynomial Positivity for Polynomial Lyapunov Function Synthesis.</i> </font><br> In IMA Journal of Mathematical Control and Information, 2015, Oxford University Press. </li>
          <li>Xin Chen, Sriram Sankaranarayanan, Erika Abraham. <br>  <font color="blue"><i>Under-Approximate Flowpipes for Non-Linear Continuous Systems.</i> </font><br> In Formal Methods in Computer-Aided Design (FMCAD), pp. 59-66, 2014, IEEE.</li>
