--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
      
      <h3>Selected Publications</h3>
      <ol type="1">
-         <li>Chao Huang, Jiameng Fan, Wenchao Li, Xin Chen, and Qi Zhu. <br> <font color="blue"><i>ReachNN: Reachability Analysis of Neural-Network Controlled Systems.</i></font> <br> In ACM Transactions on Embedded Computing Systems (TECS), to appear.</li>
-         <li>Hansol Yoon, Yi Chou, Xin Chen, Eric Frew, and Sriram Sankaranarayanan. <br> <font color="blue"><i>Predictive Runtime Monitoring for Linear Stochastic Systems and Applications to Geofence Enforcement for UAVs.</i></font> <br> In Runtime Verification (RV), to appear.</li>
+         <li>Chao Huang, Jiameng Fan, Wenchao Li, Xin Chen, and Qi Zhu. <br> <font color="blue"><i>	Towards Verification-Aware Knowledge Distillation for Neural-Network Controlled Systems.</i></font> <br> In the International Conference On Computer Aided Design (ICCAD) (Special session: The Road to Safe Autonomy: Neural Networks Meet Formal Reasoning), to appear, 2019.</li>
+         <li>Chao Huang, Jiameng Fan, Wenchao Li, Xin Chen, and Qi Zhu. <br> <font color="blue"><i>ReachNN: Reachability Analysis of Neural-Network Controlled Systems.</i></font> <br> In ACM Transactions on Embedded Computing Systems (TECS), to appear, 2019.</li>
+         <li>Hansol Yoon, Yi Chou, Xin Chen, Eric Frew, and Sriram Sankaranarayanan. <br> <font color="blue"><i>Predictive Runtime Monitoring for Linear Stochastic Systems and Applications to Geofence Enforcement for UAVs.</i></font> <br> In Runtime Verification (RV), to appear, 2019.</li>
          <li>Souradeep Dutta, Xin Chen, and Sriram Sankaranarayanan. <br> <font color="blue"><i>Reachability Analysis for Neural Feedback Systems Using Regressive Polynomial Rule Inference.</i></font> <br> In Hybrid Systems: Computation and Control (HSCC), pp. 157-168, 2019.</li>
          <li>Xin Chen and Sriram Sankaranarayanan. <br> <font color="blue"><i>Model Predictive Real-Time Monitoring of Linear Systems.</i></font> <br> In Real Time Systems Symposium (RTSS), pp. 297-306, 2017.</li>
 	 <li>Xin Chen, Sergio Mover, and Sriram Sankaranarayanan. <br> <font color="blue"><i>Compositional Relational Abstraction for Nonlinear Hybrid Systems.</i></font> <br> In ACM Transactions on Embedded Computing Systems (TECS) 16(5): pp. 187:1-187:19, 2017.</li>
