--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
      
      <h3>Projects</h3>
      <ul style="list-style-type:square">
-	 <li>2019.08 - 2020.07, Analysis and Abstraction of Hybrid Systems (PI), funded by Air Force Research Laboratory, $83,158.</li>
+	 <li>2019.08 - 2020.07 (Ongoing), Analysis and Abstraction of Hybrid Systems (PI), funded by Air Force Research Laboratory, $83,158.</li>
      <li>2017.05 - 2017.08, Summer of Innovation (co-PI), funded by Air Force Research Laboratory, $35,000 (my share).</li>
      </ul>
      <br>
