--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
      
      <h3>Selected Publications</h3>
      <ol type="1">
-         <li>Chao Huang, Jiameng Fan, Wenchao Li, Xin Chen, and Qi Zhu. <br> <font color="blue"><i>	Towards Verification-Aware Knowledge Distillation for Neural-Network Controlled Systems.</i></font> <br> In the International Conference On Computer Aided Design (ICCAD) (Special session: The Road to Safe Autonomy: Neural Networks Meet Formal Reasoning), pp. 1-8. IEEE, 2019.</li>
+         <li>Chao Huang, Jiameng Fan, Wenchao Li, Xin Chen, and Qi Zhu. <br> <font color="blue"><i>	Towards Verification-Aware Knowledge Distillation for Neural-Network Controlled Systems. (Invited Paper) </i></font> <br> In the International Conference On Computer Aided Design (ICCAD) (Special session: The Road to Safe Autonomy: Neural Networks Meet Formal Reasoning), pp. 1-8. IEEE, 2019.</li>
          <li>Chao Huang, Jiameng Fan, Wenchao Li, Xin Chen, and Qi Zhu. <br> <font color="blue"><i>ReachNN: Reachability Analysis of Neural-Network Controlled Systems.</i></font> <br> In ACM Transactions on Embedded Computing Systems (TECS), volume 18, number 5s, pp. 106:1-106:22. ACM, 2019.</li>
          <li>Hansol Yoon, Yi Chou, Xin Chen, Eric Frew, and Sriram Sankaranarayanan. <br> <font color="blue"><i>Predictive Runtime Monitoring for Linear Stochastic Systems and Applications to Geofence Enforcement for UAVs.</i></font> <br> In Runtime Verification (RV), volume 11757 of LNCS, pp. 349-367. Springer, 2019.</li>
          <li>Souradeep Dutta, Xin Chen, and Sriram Sankaranarayanan. <br> <font color="blue"><i>Reachability Analysis for Neural Feedback Systems Using Regressive Polynomial Rule Inference.</i></font> <br> In Hybrid Systems: Computation and Control (HSCC), pp. 157-168, 2019.</li>
