--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 
  <head>
      <title> Xin Chen's home page </title>
+
+     <style>
+         dd { margin-bottom: 4ex; }
+     </style>
+
  </head>
  
  <body>
@@ -52,24 +57,42 @@
      </ul>
      <br>
      <br>
+
      
      <h3>Selected Publications</h3>
-     <ol type="1">
-	 <li>Chao Huang, Jiameng Fan, Xin Chen, Wenchao Li, and Qi Zhu. <br> <font color="blue"><i> Divide and Slide: Layer-Wise Refinement for Output Range Analysis of Deep Neural Networks. </i></font> <br> In the IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD). To Appear, 2020. </li>
-	 <li>Qin Lin, Xin Chen, Aman Khurana, and John Dolan. <br> <font color="blue"><i> ReachFlow: An Online Safety Assurance Framework for Waypoint-Following of Self-driving Cars. </i></font> <br> In the International Conference on Intelligent Robots and Systems (IROS). To Appear, 2020. </li>
-	 <li>Jiameng Fan, Chao Huang, Xin Chen, Wenchao Li, and Qi Zhu. <br> <font color="blue"><i> ReachNN*: A Tool for Reachability Analysis of Neural-Network Controlled Systems. (Tool Paper) </i></font> <br> In the International Symposium on Automated Technology for Verification and Analysis (ATVA). To Appear, 2020. </li>
-         <li>Chao Huang, Jiameng Fan, Wenchao Li, Xin Chen, and Qi Zhu. <br> <font color="blue"><i>	Towards Verification-Aware Knowledge Distillation for Neural-Network Controlled Systems. (Invited Paper) </i></font> <br> In the International Conference On Computer Aided Design (ICCAD) (Special session: The Road to Safe Autonomy: Neural Networks Meet Formal Reasoning), pp. 1-8. IEEE, 2019.</li>
-         <li>Chao Huang, Jiameng Fan, Wenchao Li, Xin Chen, and Qi Zhu. <br> <font color="blue"><i>ReachNN: Reachability Analysis of Neural-Network Controlled Systems.</i></font> <br> In ACM Transactions on Embedded Computing Systems (TECS), volume 18, number 5s, pp. 106:1-106:22. ACM, 2019.</li>
-         <li>Hansol Yoon, Yi Chou, Xin Chen, Eric Frew, and Sriram Sankaranarayanan. <br> <font color="blue"><i>Predictive Runtime Monitoring for Linear Stochastic Systems and Applications to Geofence Enforcement for UAVs.</i></font> <br> In Runtime Verification (RV), volume 11757 of LNCS, pp. 349-367. Springer, 2019.</li>
-         <li>Souradeep Dutta, Xin Chen, and Sriram Sankaranarayanan. <br> <font color="blue"><i>Reachability Analysis for Neural Feedback Systems Using Regressive Polynomial Rule Inference.</i></font> <br> In Hybrid Systems: Computation and Control (HSCC), pp. 157-168, 2019.</li>
-         <li>Xin Chen and Sriram Sankaranarayanan. <br> <font color="blue"><i>Model Predictive Real-Time Monitoring of Linear Systems.</i></font> <br> In Real Time Systems Symposium (RTSS), pp. 297-306, 2017.</li>
-	 <li>Xin Chen, Sergio Mover, and Sriram Sankaranarayanan. <br> <font color="blue"><i>Compositional Relational Abstraction for Nonlinear Hybrid Systems.</i></font> <br> In ACM Transactions on Embedded Computing Systems (TECS) 16(5): pp. 187:1-187:19, 2017.</li>
-         <li>Xin Chen, Sriram Sankaranarayanan. <br>  <font color="blue"><i>Decomposed Reachability Analysis for Nonlinear Systems.</i> </font><br> In Real-Time Systems Symposium (RTSS), 2016.</li>
-         <li>Mohamed Amin Ben Sassi, Sriram Sankaranarayanan, Xin Chen, Erika Abraham. <br>  <font color="blue"><i>Linear Relaxations of Polynomial Positivity for Polynomial Lyapunov Function Synthesis.</i> </font><br> In IMA Journal of Mathematical Control and Information, 2015, Oxford University Press. </li>
-         <li>Xin Chen, Sriram Sankaranarayanan, Erika Abraham. <br>  <font color="blue"><i>Under-Approximate Flowpipes for Non-Linear Continuous Systems.</i> </font><br> In Formal Methods in Computer-Aided Design (FMCAD), pp. 59-66, 2014, IEEE.</li>
-         <li>Xin Chen, Erika Abraham, Sriram Sankaranarayanan. <br> <font color="blue"> <i>Flow*: An Analyzer for Non-Linear Hybrid Systems.</i> </font><br> In Computer-Aided Verification (CAV), volume 8044 of LNCS, pp. 258-263, 2013.</li>
-         <li>Xin Chen, Erika Abraham, Sriram Sankaranarayanan. <br>  <font color="blue"><i>Taylor Model Flowpipe Construction for Non-linear Hybrid Systems.</i> </font><br> In Real Time Systems Symposium (RTSS), pp. 183-192, 2012.</li>
-     </ol>
+   
+     <dl>
+        <dt style="color:darkred;font-weight:bold">[TCAD'20]</dt>
+	   <dd>Chao Huang, Jiameng Fan, Xin Chen, Wenchao Li, and Qi Zhu. <br> <font color="blue"><i> Divide and Slide: Layer-Wise Refinement for Output Range Analysis of Deep Neural Networks. </i></font> <br> In IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD). To Appear, 2020. </dd>
+        <dt style="color:darkred;font-weight:bold">[IROS'20]</dt> 
+	   <dd>Qin Lin, Xin Chen, Aman Khurana, and John Dolan. <br> <font color="blue"><i> ReachFlow: An Online Safety Assurance Framework for Waypoint-Following of Self-driving Cars. </i></font> <br> In the International Conference on Intelligent Robots and Systems (IROS). To Appear, 2020. </dd>
+        <dt style="color:darkred;font-weight:bold">[ATVA'20]</dt>
+	   <dd>Jiameng Fan, Chao Huang, Xin Chen, Wenchao Li, and Qi Zhu. <br> <font color="blue"><i> ReachNN*: A Tool for Reachability Analysis of Neural-Network Controlled Systems. (Tool Paper) </i></font> <br> In the International Symposium on Automated Technology for Verification and Analysis (ATVA). To Appear, 2020. </dd>
+         <dt style="color:darkred;font-weight:bold">[ICCAD'19]</dt>
+         <dd>Chao Huang, Jiameng Fan, Wenchao Li, Xin Chen, and Qi Zhu. <br> <font color="blue"><i>	Towards Verification-Aware Knowledge Distillation for Neural-Network Controlled Systems. (Invited Paper) </i></font> <br> In the International Conference On Computer Aided Design (ICCAD) (Special session: The Road to Safe Autonomy: Neural Networks Meet Formal Reasoning), pp. 1-8. IEEE, 2019.</dd>
+         <dt style="color:darkred;font-weight:bold">[TECS'19]</dt>
+         <dd>Chao Huang, Jiameng Fan, Wenchao Li, Xin Chen, and Qi Zhu. <br> <font color="blue"><i>ReachNN: Reachability Analysis of Neural-Network Controlled Systems.</i></font> <br> In ACM Transactions on Embedded Computing Systems (TECS), volume 18, number 5s, pp. 106:1-106:22. ACM, 2019.</dd>
+         <dt style="color:darkred;font-weight:bold">[RV'19]</dt>
+         <dd>Hansol Yoon, Yi Chou, Xin Chen, Eric Frew, and Sriram Sankaranarayanan. <br> <font color="blue"><i>Predictive Runtime Monitoring for Linear Stochastic Systems and Applications to Geofence Enforcement for UAVs.</i></font> <br> In Runtime Verification (RV), volume 11757 of LNCS, pp. 349-367. Springer, 2019.</dd>
+         <dt style="color:darkred;font-weight:bold">[HSCC'19]</dt>
+         <dd>Souradeep Dutta, Xin Chen, and Sriram Sankaranarayanan. <br> <font color="blue"><i>Reachability Analysis for Neural Feedback Systems Using Regressive Polynomial Rule Inference.</i></font> <br> In Hybrid Systems: Computation and Control (HSCC), pp. 157-168, 2019.</dd>
+         <dt style="color:darkred;font-weight:bold">[RTSS'17]</dt>
+         <dd>Xin Chen and Sriram Sankaranarayanan. <br> <font color="blue"><i>Model Predictive Real-Time Monitoring of Linear Systems.</i></font> <br> In Real Time Systems Symposium (RTSS), pp. 297-306, 2017.</dd>
+         <dt style="color:darkred;font-weight:bold">[TECS'17]</dt>
+	     <dd>Xin Chen, Sergio Mover, and Sriram Sankaranarayanan. <br> <font color="blue"><i>Compositional Relational Abstraction for Nonlinear Hybrid Systems.</i></font> <br> In ACM Transactions on Embedded Computing Systems (TECS) 16(5): pp. 187:1-187:19, 2017.</dd>
+         <dt style="color:darkred;font-weight:bold">[RTSS'16]</dt>
+         <dd>Xin Chen, Sriram Sankaranarayanan. <br>  <font color="blue"><i>Decomposed Reachability Analysis for Nonlinear Systems.</i> </font><br> In Real-Time Systems Symposium (RTSS), 2016.</dd>
+         <dt style="color:darkred;font-weight:bold">[JMCI'15]</dt>
+         <dd>Mohamed Amin Ben Sassi, Sriram Sankaranarayanan, Xin Chen, Erika Abraham. <br>  <font color="blue"><i>Linear Relaxations of Polynomial Positivity for Polynomial Lyapunov Function Synthesis.</i> </font><br> In IMA Journal of Mathematical Control and Information, 2015, Oxford University Press. </dd>
+         <dt style="color:darkred;font-weight:bold">[FMCAD'14]</dt>
+         <dd>Xin Chen, Sriram Sankaranarayanan, Erika Abraham. <br>  <font color="blue"><i>Under-Approximate Flowpipes for Non-Linear Continuous Systems.</i> </font><br> In Formal Methods in Computer-Aided Design (FMCAD), pp. 59-66, 2014, IEEE.</dd>
+         <dt style="color:darkred;font-weight:bold">[ICCAD'13]</dt>
+         <dd>Yan Zhang, Sriram Sankaranarayanan, Fabio Somenzi, Xin Chen, Erika Abraham. <br> <font color="blue"> <i>From statistical model checking to statistical model inference: Characterizing the effect of process variations in analog circuits.</i> </font><br> In the International Conference On Computer Aided Design (ICCAD), pp. 662-669, 2013.</dd>
+         <dt style="color:darkred;font-weight:bold">[CAV'13]</dt>
+         <dd>Xin Chen, Erika Abraham, Sriram Sankaranarayanan. <br> <font color="blue"> <i>Flow*: An Analyzer for Non-Linear Hybrid Systems.</i> </font><br> In Computer-Aided Verification (CAV), volume 8044 of LNCS, pp. 258-263, 2013.</dd>
+         <dt style="color:darkred;font-weight:bold">[RTSS'12]</dt>
+         <dd>Xin Chen, Erika Abraham, Sriram Sankaranarayanan. <br>  <font color="blue"><i>Taylor Model Flowpipe Construction for Non-linear Hybrid Systems.</i> </font><br> In Real Time Systems Symposium (RTSS), pp. 183-192, 2012.</dd>
+     </dl>
      <br>
      <br>
      <h3>Full List of Publications</h3>
