--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <dt style="color:darkred;font-weight:bold">[TCAD'20]</dt>
 	   <dd>Chao Huang, Jiameng Fan, Xin Chen, Wenchao Li, and Qi Zhu. <br> <font color="blue"><i> Divide and Slide: Layer-Wise Refinement for Output Range Analysis of Deep Neural Networks. </i></font> <br> In IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD). To Appear, 2020. </dd>
         <dt style="color:darkred;font-weight:bold">[IROS'20]</dt> 
-	   <dd>Qin Lin, Xin Chen, Aman Khurana, and John Dolan. <br> <font color="blue"><i> ReachFlow: An Online Safety Assurance Framework for Waypoint-Following of Self-driving Cars. </i></font> <br> In the International Conference on Intelligent Robots and Systems (IROS). To Appear, 2020. </dd>
+	   <dd>Qin Lin, Xin Chen, Aman Khurana, and John M. Dolan. <br> <font color="blue"><i> ReachFlow: An Online Safety Assurance Framework for Waypoint-Following of Self-driving Cars. </i></font> <br> In the International Conference on Intelligent Robots and Systems (IROS). To Appear, 2020. </dd>
         <dt style="color:darkred;font-weight:bold">[ATVA'20]</dt>
 	   <dd>Jiameng Fan, Chao Huang, Xin Chen, Wenchao Li, and Qi Zhu. <br> <font color="blue"><i> ReachNN*: A Tool for Reachability Analysis of Neural-Network Controlled Systems. (Tool Paper) </i></font> <br> In the International Symposium on Automated Technology for Verification and Analysis (ATVA). To Appear, 2020. </dd>
          <dt style="color:darkred;font-weight:bold">[ICCAD'19]</dt>
