--- a/flowstar/index.html
+++ b/flowstar/index.html
@@ -62,7 +62,7 @@
      <font style="font-family: cursive">A:</font>&nbsp;&nbsp;&nbsp;
      <br>
      <br>
-     <font style="font-family: cursive">Q:</font>&nbsp;&nbsp;&nbsp;<i>Is there any update from Flow* 2.1.0?</i>
+     <font style="font-family: cursive">Q:</font>&nbsp;&nbsp;&nbsp;<i>Is there any update from Flow* 2.1.0 in the toolbox?</i>
      <br>
      <font style="font-family: cursive">A:</font>&nbsp;&nbsp;&nbsp;
      <br>
