--- a/flowstar/index.html
+++ b/flowstar/index.html
@@ -53,7 +53,7 @@
      
      <font style="font-family: cursive">Q:</font>&nbsp;&nbsp;&nbsp;<i>How to use the Flow* toolbox?</i>
      <br>
-     <font style="font-family: cursive">A:</font>&nbsp;&nbsp;&nbsp; The Flow* toolbox provides a set of C++ data structures and functions for modeling the continuous and discrete dynamics in a CPS.<br><br><br>
+     <font style="font-family: cursive">A:</font>&nbsp;&nbsp;&nbsp; The Flow* toolbox provides a set of C++ data structures and functions for modeling the continuous and discrete dynamics in a CPS. Unlike the Flow* tool version, the toolbox focuses on providing a platform that allows users to build CPS simulators generating reachable set overapproximations using C++ programming language. As an example, the Matlab code used to generate a trajectory of system states under an ODE dynamics in the following figure can be rewritten in C++ using the Flow* toolbox, and the result is an overapproximation of the reachable set. <br><br><br>
      <center><img src="../images/modeling.png" alt="modeling" width='1000'></center>
      <br>
      <br>
@@ -84,9 +84,9 @@
      <h2>Applications</h2>
      <br>
      <br>
-   <br>
-   <br>
-   <br>
+     <br>
+     <br>  
+     <br>
    -- The site will be completed soon. --
  </body>
 </html>
