--- a/flowstar/index.html
+++ b/flowstar/index.html
@@ -51,20 +51,20 @@
      <b>(ii) apply the Flow* reachability algorithms to online platforms such as self-driving vehicles.</b></p>
      <br>
      
-     <font style="font-family: cursive">Q:</font>&nbsp;&nbsp;&nbsp;<i>How to use the Flow* toolbox?</i>
+     <font style="font-family: cursive">Q:</font>&nbsp;&nbsp;&nbsp;<i><font color="#b00000">How to use the Flow* toolbox?</font></i>
      <br>
-     <font style="font-family: cursive">A:</font>&nbsp;&nbsp;&nbsp; The Flow* toolbox provides a set of C++ data structures and functions for modeling the continuous and discrete dynamics in a CPS. Unlike the Flow* tool version, the toolbox focuses on providing a platform that allows users to build CPS simulators generating reachable set overapproximations using C++ programming language. As an example, the Matlab code used to generate a trajectory of system states under an ODE dynamics in the following figure can be rewritten in C++ using the Flow* toolbox, and the result is an overapproximation of the reachable set. <br><br><br>
+     <font style="font-family: cursive">A:</font>&nbsp;&nbsp;&nbsp; <font color="#007000">The Flow* toolbox provides a set of C++ data structures and functions for modeling the continuous and discrete dynamics in a CPS. Unlike the Flow* tool version, the toolbox focuses on providing a platform that allows users to build CPS simulators generating reachable set overapproximations using C++ programming language. As an example, the Matlab code used to generate a trajectory of system states under an ODE dynamics in the following figure can be rewritten in C++ using the Flow* toolbox, and the result is an overapproximation of the reachable set.</font> <br><br><br>
      <center><img src="../images/modeling.png" alt="modeling" width='1000'></center>
      <br>
      <br>
-     <font style="font-family: cursive">Q:</font>&nbsp;&nbsp;&nbsp;<i>What are the guarantees on the obtained results?</i>
+     <font style="font-family: cursive">Q:</font>&nbsp;&nbsp;&nbsp;<i><font color="#b00000">What are the guarantees on the obtained results?</font></i>
      <br>
-     <font style="font-family: cursive">A:</font>&nbsp;&nbsp;&nbsp;
+     <font style="font-family: cursive">A:</font>&nbsp;&nbsp;&nbsp;<font color="#007000">The reachable set overapproximations are guaranteed to contain all system reachable states. Not only the approximation errors but also all numerical errors due to roundoff, truncation and cutoff in the reachability computation are included in the overapproximations.</font>
      <br>
      <br>
-     <font style="font-family: cursive">Q:</font>&nbsp;&nbsp;&nbsp;<i>Is there any update from Flow* 2.1.0 in the toolbox?</i>
+     <font style="font-family: cursive">Q:</font>&nbsp;&nbsp;&nbsp;<i><font color="#b00000">Is there any update from Flow* 2.1.0 in the toolbox?</font></i>
      <br>
-     <font style="font-family: cursive">A:</font>&nbsp;&nbsp;&nbsp;
+     <font style="font-family: cursive">A:</font>&nbsp;&nbsp;&nbsp;<font color="#007000">All basic data structures are updated in the toolbox, and the performance is improved by at least <b>80%</b> from Flow* 2.1.0. </font>
      <br>
      <br>
      <h2>Writing a simulator which produces reachable set overapproximations and verifying the safety</h2>
@@ -76,9 +76,9 @@
         <li><a>Dealing with an <b><i>event-triggered</i></b> jump.</a></li>
      </ul>
      <br>
-     <font style="font-family: cursive">Q:</font>&nbsp;&nbsp;&nbsp;<i>How can I choose the right parameters for the reachability computation?</i>
+     <font style="font-family: cursive">Q:</font>&nbsp;&nbsp;&nbsp;<i><font color="#b00000">How can I choose the right parameters for the reachability computation?</font></i>
      <br>
-     <font style="font-family: cursive">A:</font>&nbsp;&nbsp;&nbsp;
+     <font style="font-family: cursive">A:</font>&nbsp;&nbsp;&nbsp;<font color="#007000"></font>
      <br>
      <br>
      <h2>Applications</h2>
