--- a/index.html
+++ b/index.html
@@ -56,13 +56,17 @@
     <text x="200" y="290" text-anchor="middle" style="color:black;font-weight:bold;font-size:16pt">actuates</text>
 
     <rect x="690" y="20" rx="10" ry="10" width="600" height="90" style="fill:transparent;stroke:#666600;stroke-width:2" />
+    <rect x="690" y="230" rx="10" ry="10" width="450" height="30" style="fill:transparent;stroke:#0000bb;stroke-width:2" />
     <rect x="690" y="480" rx="10" ry="10" width="400" height="90" style="fill:transparent;stroke:#006666;stroke-width:2" />
     <rect x="150" y="560" rx="10" ry="10" width="400" height="90" style="fill:transparent;stroke:#000055;stroke-width:2" />
 
     <path d="M 505 130 L 685 70" stroke="#666600" stroke-width="2" fill="none" />
+    <path d="M 560 245 L 685 245" stroke="#0000bb" stroke-width="2" fill="none" />
     <path d="M 505 450 L 685 530" stroke="#006666" stroke-width="2" fill="none" />
     <path d="M 400 505 L 350 555" stroke="#000055" stroke-width="2" fill="none" />
     
+    <text x="700" y="250" text-anchor="start" style="font-size:12pt;font-family:Arial;font-weight:bold", fill="#0000bb">Real-Time Recovery Against Sensor Attacks: <a href="" target="_blank">[RTSS'20]</a></text>
+         
     <text x="700" y="40" text-anchor="start" style="font-size:12pt;font-family:Arial;font-weight:bold", fill="#666600">Verification of Neural Network Controllers: <a href="" target="_blank">[TCAD'20]</a>, <a href="https://dl.acm.org/doi/10.1145/3358228" target="_blank">[TECS'19]</a>, <a href="https://dl.acm.org/doi/10.1145/3302504.3311807" target="_blank">[HSCC'19]</a></text>
     <text x="700" y="70" text-anchor="start" style="font-size:12pt;font-family:Arial;font-weight:bold", fill="#666600">Synthesis of Neural Network Controllers: <a href="https://ieeexplore.ieee.org/document/8942059" target="_blank">[ICCAD'19]</a></text>
     <text x="700" y="100" text-anchor="start" style="font-size:12pt;font-family:Arial;font-weight:bold", fill="#666600">Real-Time Monitoring: <a href="https://link.springer.com/chapter/10.1007/978-3-030-32079-9_20" target="_blank">[RV'19]</a>, <a href="https://ieeexplore.ieee.org/document/8277302" target="_blank">[RTSS'17]</a></text>
@@ -106,6 +110,8 @@
      <h2>Selected Publications</h2>
    
      <dl>
+         <dt style="color:darkred;font-weight:bold">[RTSS'20]</dt>
+         <dd>Lin Zhang, Xin Chen, Fanxin Kong, Alvaro A. Cardenas. <br> <font color="blue"><i> Real-Time Recovery for Cyber-Physical Systems using Linear Approximations. </i></font> <br> In IEEE Real-Time Systems Symposium (RTSS). To Appear, 2020.</dd>
         <dt style="color:darkred;font-weight:bold">[TCAD'20]</dt>
 	   <dd>Chao Huang, Jiameng Fan, Xin Chen, Wenchao Li, and Qi Zhu. <br> <font color="blue"><i> Divide and Slide: Layer-Wise Refinement for Output Range Analysis of Deep Neural Networks. </i></font> <br> In IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD). To Appear, 2020. </dd>
         <dt style="color:darkred;font-weight:bold">[IROS'20]</dt> 
