--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
      <br>
      
      <h2>PhD thesis</h2>
-     <a href="https://www.cs.colorado.edu/~xich8622/papers/thesis.pdf" target="_blank"><i>Reachability Analysis of Non-Linear Hybrid Systems Using Taylor Models.</i></a> RWTH Aachen University, 2015.
+     <a href="papers/PhD_Thesis.pdf" target="_blank"><i>Reachability Analysis of Non-Linear Hybrid Systems Using Taylor Models.</i></a> RWTH Aachen University, 2015.
      <br>
      <br>
      
