--- a/index.html
+++ b/index.html
@@ -88,11 +88,14 @@
      <br>
      
      <h2>Software</h2>
-     <a href="http://flowstar.org/" target="_blank">Flow*</a> is a tool for the <strong>reachability analysis</strong> and <strong>safety verification</strong> for nonlinear hybrid systems. <br>
+     <ul style="list-style-type:square">
+     <li>
+     <a href="http://flowstar.org/" target="_blank">Flow*</a> is a tool for the <strong>reachability analysis</strong> and <strong>safety verification</strong> for nonlinear hybrid systems.
 	 We released a toolbox version of Flow*, it has a completely new design of data structures and a much better performance. <a href="https://github.com/chenxin415/flowstar">Flow* Toolbox</a>
+     </li>
      <br>
      <br>
-     <a href="https://github.com/ChaoHuang2018/POLAR_Tool" target="_blank">POLAR</a> is a tool for the formal verification of Neural Network-Controlled Systems.
+     <li> <a href="https://github.com/ChaoHuang2018/POLAR_Tool" target="_blank">POLAR</a> is a tool for the formal verification of Neural Network-Controlled Systems. </li>
      <br>
      
      <h2>PhD thesis</h2>
