--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
      <ul style="list-style-type:square">
      <li>
      <a href="http://flowstar.org/" target="_blank">Flow*</a> is a tool for the <strong>reachability analysis</strong> and <strong>safety verification</strong> for nonlinear hybrid systems.
-	 We released a toolbox version of Flow*, it has a completely new design of data structures and a much better performance. <a href="https://github.com/chenxin415/flowstar">Flow* Toolbox</a>
+	 We released a <a href="https://github.com/chenxin415/flowstar"> toolbox version </a> of Flow*, it has a completely new design of data structures and a much better performance.
      </li>
-     <br>
      <br>
      <li> <a href="https://github.com/ChaoHuang2018/POLAR_Tool" target="_blank">POLAR</a> is a tool for the formal verification of Neural Network-Controlled Systems. </li>
      <br>
