--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
      <ul style="list-style-type:square">
      <li>
      <a href="http://flowstar.org/" target="_blank">Flow*</a> is a tool for the <strong>reachability analysis</strong> and <strong>safety verification</strong> for nonlinear hybrid systems.
-	 We released a <a href="https://github.com/chenxin415/flowstar"> toolbox version </a> of Flow*, it has a completely new design of data structures and a much better performance.
+	 We released a <a href="https://github.com/chenxin415/flowstar" target="_blank">toolbox version</a> of Flow*, it has a completely new design of data structures and a much better performance.
      </li>
      <br>
      <li> <a href="https://github.com/ChaoHuang2018/POLAR_Tool" target="_blank">POLAR</a> is a tool for the formal verification of Neural Network-Controlled Systems. </li>
