--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
      <h2>Selected Publications</h2>
    
      <dl>
+	 <dt style="color:darkred;font-weight:bold">[ATVA'22]</dt>
+         <dd>Chao Huang, Jiameng Fan, Xin Chen, Wenchao Li, Qi Zhu. <br> <font color="blue"><i> POLAR: A Polynomial Arithmetic Framework for Verifying Neural-Network Controlled Systems. </i></font> <br> In Automated Technology for Verification and Analysis (ATVA), volume 13505 of LNCS, pp. 414–430. Springer, 2022.</dd>
          <dt style="color:darkred;font-weight:bold">[NFM'22]</dt>
          <dd>Xin Chen, Sriram Sankaranarayanan. <br> <font color="blue"><i> Reachability Analysis for Cyber-Physical Systems: Are We There Yet?. </i></font> <br> In NASA Formal Methods (NFM), volume 13260 of LNCS, pp. 109–130. Springer, 2022.</dd>
          <dt style="color:darkred;font-weight:bold">[TECS'21]</dt>
