--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
          <tr>
              <td>
                 <h1>Xin Chen &nbsp;&nbsp; <i>(pronounced Shin Chern)</i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h1>
-                Assistant Professor <br> Department of Computer Science <br> University of Dayton, OH
-                <h3>Email: &nbsp; <i>xchen4 AT udayton DOT edu</i></h3>
+                Assistant Professor <br> Department of Computer Science <br> University of New Mexico, Albuquerque NM
+                <h3>Email: &nbsp; <i>chenxin AT unm DOT edu</i></h3>
              </td>
              <td>
                  <img src="images/chen.png" alt="xinchen" width='320'>
