--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
 
      
      <h2>Selected Publications</h2>
-     Book Chapter
+     <h3>Book Chapter</h3>
      <dl>
          <dd>Xin Chen, Jiameng Fan, Chao Huang, Ruochen Jiao, Wenchao Li, Xiangguo Liu, Yixuan Wang, Zhilu Wang, Weichao Zhou, Qi Zhu. <br> <font color="blue"><i> Safety-Assured Design and Adaptation of Connected and Autonomous Vehicles. </i></font> <br> In 
 Machine Learning and Optimization Techniques for Automotive Cyber-Physical Systems, pp. 735–757. 2023.</dd>
      </dl>
      <br>
 	     
-     Peer-Reviewed Conference and Journal Papers
+     <h3>Peer-Reviewed Conference and Journal Papers</h3>
      <dl>
 	 <dt style="color:darkred;font-weight:bold">[RTAS'23]</dt>
          <dd>Lin Zhang, Kaustubh Sridhar, Mengyu Liu, Pengyuan Lu, Xin Chen, Fanxin Kong, Oleg Sokolsky, Insup Lee. <br> <font color="blue"><i> Real-Time Data-Predictive Attack-Recovery for Complex Cyber-Physical Systems. </i></font> <br> In IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS), To Appear. 2023.</dd>
