--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
      
      <h2>Selected Publications</h2>
      <h3>Book Chapter</h3>
-     <ul>
+     <ul style="list-style-type:square">
          <li>Xin Chen, Jiameng Fan, Chao Huang, Ruochen Jiao, Wenchao Li, Xiangguo Liu, Yixuan Wang, Zhilu Wang, Weichao Zhou, Qi Zhu. <br> <font color="blue"><i> Safety-Assured Design and Adaptation of Connected and Autonomous Vehicles. </i></font> <br> In 
 Machine Learning and Optimization Techniques for Automotive Cyber-Physical Systems, pp. 735–757. 2023.</li>
      </ul>
