--- a/index.html
+++ b/index.html
@@ -121,8 +121,10 @@ Machine Learning and Optimization Techniques for Automotive Cyber-Physical Syste
 	     
      <h3>Peer-Reviewed Conference and Journal Papers</h3>
      <dl>
+	 <dt style="color:darkred;font-weight:bold">[TCAD'23]</dt>
+         <dd>Yixuan Wang, Weichao Zhou, Jiameng Fan, Zhilu Wang, Jiajun Li, Xin Chen, Chao Huang, Wenchao Li, Qi Zhu. <br> <font color="blue"><i> POLAR-Express: Efficient and Precise Formal Reachability Analysis of Neural-Network Controlled Systems. </i></font> <br> In IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD). To Appear. 2023.</dd>
 	 <dt style="color:darkred;font-weight:bold">[RTAS'23]</dt>
-         <dd>Lin Zhang, Kaustubh Sridhar, Mengyu Liu, Pengyuan Lu, Xin Chen, Fanxin Kong, Oleg Sokolsky, Insup Lee. <br> <font color="blue"><i> Real-Time Data-Predictive Attack-Recovery for Complex Cyber-Physical Systems. </i></font> <br> In IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS), To Appear. 2023.</dd>
+         <dd>Lin Zhang, Kaustubh Sridhar, Mengyu Liu, Pengyuan Lu, Xin Chen, Fanxin Kong, Oleg Sokolsky, Insup Lee. <br> <font color="blue"><i> Real-Time Data-Predictive Attack-Recovery for Complex Cyber-Physical Systems. </i></font> <br> In IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS), pp. 209-222, 2023.</dd>
 	 <dt style="color:darkred;font-weight:bold">[ATVA'22]</dt>
          <dd>Chao Huang, Jiameng Fan, Xin Chen, Wenchao Li, Qi Zhu. <br> <font color="blue"><i> POLAR: A Polynomial Arithmetic Framework for Verifying Neural-Network Controlled Systems. </i></font> <br> In Automated Technology for Verification and Analysis (ATVA), volume 13505 of LNCS, pp. 414–430. Springer, 2022.</dd>
          <dt style="color:darkred;font-weight:bold">[NFM'22]</dt>
