--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@ Machine Learning and Optimization Techniques for Automotive Cyber-Physical Syste
 	     
      <h3>Peer-Reviewed Conference and Journal Papers</h3>
      <dl>
+	 <dt style="color:darkred;font-weight:bold">[AAAI'24]</dt>
+         <dd>Feisi Fu, Zhilu Wang, Weichao Zhou, Yixuan Wang, Jiameng Fan, Chao Huang, Zhu Qi, Xin Chen, Wenchao Li. <br> <font color="blue"><i> REGLO: Provable Neural Network Repair for Global Robustness Properties. </i></font> <br> In AAAI Conference on Artificial Intelligence (AAAI). To Appear. 2024.</dd>
 	 <dt style="color:darkred;font-weight:bold">[TCAD'23]</dt>
          <dd>Yixuan Wang, Weichao Zhou, Jiameng Fan, Zhilu Wang, Jiajun Li, Xin Chen, Chao Huang, Wenchao Li, Qi Zhu. <br> <font color="blue"><i> POLAR-Express: Efficient and Precise Formal Reachability Analysis of Neural-Network Controlled Systems. </i></font> <br> In IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD). To Appear. 2023.</dd>
 	 <dt style="color:darkred;font-weight:bold">[RTAS'23]</dt>
