--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     </table>
      <br>
      <br>
+
+     <font color = "red" size="2"> (Openings for Ph.D. students: I am looking for self-motivated students working on the analysis and synthesis of: (1) large-scale hybrid systems, (2) stochastic processes, (3) AI/ML algorithms.) </font>
      
      <h2>Research interests</h2>
      I am primarily interested in solving the safety and security problems on <i>Cyber-Physical Systems</i> equipped with machine learning components using formal methods. <br> A graphic overview of my research topics along with some of my representative publications are given as below.
@@ -83,7 +85,7 @@
     <br>
      <br>
      <h2>Committee member</h2>
-     ASP-DAC 2024, AAAI 2023, ARCH 2022, NSV 2022, ARCH 2021, ARCH 2020, EMSOFT 2019, ARCH 2019, ARCH 2018, EMSOFT WiP 2018, ARCH 2017, SNR 2017, CAV 2016 AEC, HSCC RE 2016, ARCH 2016, ARCH 2015, HSCC RE 2014.
+     DAC 2024, ASP-DAC 2024, AAAI 2023, ARCH 2022, NSV 2022, ARCH 2021, ARCH 2020, EMSOFT 2019, ARCH 2019, ARCH 2018, EMSOFT WiP 2018, ARCH 2017, SNR 2017, CAV 2016 AEC, HSCC RE 2016, ARCH 2016, ARCH 2015, HSCC RE 2014.
      <br>
      <br>
      
