--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@ Machine Learning and Optimization Techniques for Automotive Cyber-Physical Syste
 	     
      <h3>Peer-Reviewed Conference and Journal Papers</h3>
      <dl>
+	 <dt style="color:darkred;font-weight:bold">[RTAS'24]</dt>
+         <dd>Lin Zhang, Luis Burbano, Xin Chen, Alvaro A. Cardenas, Steve Drager, Matthew Anderson, Fanxin Kong. <br> <font color="blue"><i> Fast Attack Recovery for Stochastic Cyber-Physical Systems. </i></font> <br> In IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS). To Appear. 2024.</dd>
 	 <dt style="color:darkred;font-weight:bold">[AAAI'24]</dt>
          <dd>Feisi Fu, Zhilu Wang, Weichao Zhou, Yixuan Wang, Jiameng Fan, Chao Huang, Zhu Qi, Xin Chen, Wenchao Li. <br> <font color="blue"><i> REGLO: Provable Neural Network Repair for Global Robustness Properties. </i></font> <br> In AAAI Conference on Artificial Intelligence (AAAI). To Appear. 2024.</dd>
 	 <dt style="color:darkred;font-weight:bold">[TCAD'23]</dt>
