--- a/index.html
+++ b/index.html
@@ -121,12 +121,14 @@ Machine Learning and Optimization Techniques for Automotive Cyber-Physical Syste
 	     
      <h3>Peer-Reviewed Conference and Journal Papers</h3>
      <dl>
+	 <dt style="color:darkred;font-weight:bold">[RTSS'24]</dt>
+	 <dd>Mengyu Liu, Pengyuan Lu, Xin Chen, Oleg Sokolsky, Insup Lee and Fanxin Kong. <br> <font color="blue"><i> Deadline-Safe Reach-Avoid Control Synthesis for Cyber-Physical Systems with Reinforcement Learning. </i></font> <br> In Real Time Systems Symposium (RTSS). To Appear.</dd>
 	 <dt style="color:darkred;font-weight:bold">[RTAS'24]</dt>
-         <dd>Lin Zhang, Luis Burbano, Xin Chen, Alvaro A. Cardenas, Steve Drager, Matthew Anderson, Fanxin Kong. <br> <font color="blue"><i> Fast Attack Recovery for Stochastic Cyber-Physical Systems. </i></font> <br> In IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS). To Appear. 2024.</dd>
+         <dd>Lin Zhang, Luis Burbano, Xin Chen, Alvaro A. Cardenas, Steve Drager, Matthew Anderson, Fanxin Kong. <br> <font color="blue"><i> Fast Attack Recovery for Stochastic Cyber-Physical Systems. </i></font> <br> In IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS), pp. 280--293. IEEE, 2024.</dd>
 	 <dt style="color:darkred;font-weight:bold">[AAAI'24]</dt>
-         <dd>Feisi Fu, Zhilu Wang, Weichao Zhou, Yixuan Wang, Jiameng Fan, Chao Huang, Zhu Qi, Xin Chen, Wenchao Li. <br> <font color="blue"><i> REGLO: Provable Neural Network Repair for Global Robustness Properties. </i></font> <br> In AAAI Conference on Artificial Intelligence (AAAI). To Appear. 2024.</dd>
-	 <dt style="color:darkred;font-weight:bold">[TCAD'23]</dt>
-         <dd>Yixuan Wang, Weichao Zhou, Jiameng Fan, Zhilu Wang, Jiajun Li, Xin Chen, Chao Huang, Wenchao Li, Qi Zhu. <br> <font color="blue"><i> POLAR-Express: Efficient and Precise Formal Reachability Analysis of Neural-Network Controlled Systems. </i></font> <br> In IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD). To Appear. 2023.</dd>
+         <dd>Feisi Fu, Zhilu Wang, Weichao Zhou, Yixuan Wang, Jiameng Fan, Chao Huang, Zhu Qi, Xin Chen, Wenchao Li. <br> <font color="blue"><i> REGLO: Provable Neural Network Repair for Global Robustness Properties. </i></font> <br> In AAAI Conference on Artificial Intelligence (AAAI). {AAAI} Press, 2024.</dd>
+	 <dt style="color:darkred;font-weight:bold">[TCAD'24]</dt>
+         <dd>Yixuan Wang, Weichao Zhou, Jiameng Fan, Zhilu Wang, Jiajun Li, Xin Chen, Chao Huang, Wenchao Li, Qi Zhu. <br> <font color="blue"><i> POLAR-Express: Efficient and Precise Formal Reachability Analysis of Neural-Network Controlled Systems. </i></font> <br> In IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD), volume 43, number3, pp. 994--1007. 2024.</dd>
 	 <dt style="color:darkred;font-weight:bold">[RTAS'23]</dt>
          <dd>Lin Zhang, Kaustubh Sridhar, Mengyu Liu, Pengyuan Lu, Xin Chen, Fanxin Kong, Oleg Sokolsky, Insup Lee. <br> <font color="blue"><i> Real-Time Data-Predictive Attack-Recovery for Complex Cyber-Physical Systems. </i></font> <br> In IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS), pp. 209-222, 2023.</dd>
 	 <dt style="color:darkred;font-weight:bold">[ATVA'22]</dt>
